--- a/_posts/0000-01-02-bogunia.md
+++ b/_posts/0000-01-02-bogunia.md
@@ -2,5 +2,4 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Bogunia hiked Culebra Peak this weekend
-
+Bogunia hiked Culebra Peak on July 4th! Her 31st 14er
